--- a/Frontend/movie-website/package.json
+++ b/Frontend/movie-website/package.json
@@ -12,11 +12,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
