--- a/Backend/MovieVenture/src/main/resources/application.properties
+++ b/Backend/MovieVenture/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-server.port=8000
+server.port=5000
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/movieventure
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://movieventuredb.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movieventure
 spring.datasource.username=root
 spring.datasource.password=9892448735
 
