--- a/Backend/MovieVenture/src/main/resources/application.properties
+++ b/Backend/MovieVenture/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5000
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://movieventuredb.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movieventure
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://movieventuredatabase.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movieventuredb
+spring.datasource.username=admin
 spring.datasource.password=9892448735
 
 #ORM s/w specific properties
