updated the base url

--- a/Backend/MovieVenture/src/main/resources/application.properties
+++ b/Backend/MovieVenture/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5000
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://movieventuredatabase.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movieventuredb
+spring.datasource.url=jdbc:mysql://movieventuredatabase.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movie_venture_db
 spring.datasource.username=admin
 spring.datasource.password=9892448735
 
