updated base url

--- a/Backend/MovieVenture/src/main/resources/application.properties
+++ b/Backend/MovieVenture/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=5000
 spring.datasource.url=jdbc:mysql://movieventuredatabase.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movie_venture_db
 spring.datasource.username=admin
 spring.datasource.password=9892448735
-
+server.servlet.context-path=/api
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
