--- a/Frontend/movie-website/package.json
+++ b/Frontend/movie-website/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.16.0",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
