--- a/Backend/MovieVenture/src/main/resources/application.properties
+++ b/Backend/MovieVenture/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-server.port=5000
+server.port=8080
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://movieventuredatabase.cj66yo66izlx.eu-north-1.rds.amazonaws.com:3306/movie_venture_db
-spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/movieventure
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=9892448735
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
